--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# AI Assistant (optional)
+AI_ASSISTANT_ENABLED=false
+OPENAI_API_KEY=
+OPENAI_CHAT_MODEL=gpt-4o-mini
+OPENAI_MAX_TOKENS=512
