--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,9 @@ AI_ASSISTANT_ENABLED=false
 OPENAI_API_KEY=
 OPENAI_CHAT_MODEL=gpt-4o-mini
 OPENAI_MAX_TOKENS=512
+
+# Social posting - redirect URIs: {APP_URL}/auth/social/callback/facebook and /auth/social/callback/linkedin
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
