add post on your social plateform on one click

--- a/.env.example
+++ b/.env.example
@@ -54,8 +54,4 @@ OPENAI_API_KEY=
 OPENAI_CHAT_MODEL=gpt-4o-mini
 OPENAI_MAX_TOKENS=512
 
-# Social posting - redirect URIs: {APP_URL}/auth/social/callback/facebook and /auth/social/callback/linkedin
-FACEBOOK_APP_ID=
-FACEBOOK_APP_SECRET=
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
+# Social platforms: Admin, Vendor, and Agent save their own app credentials in Edit Profile (stored in database). No .env keys needed.
